Agregados algunos comentarios

--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -222,7 +222,7 @@
     <script src="{% static 'planeador/js/modal-trimestre-js.js' %}"></script>
 
 
-    <script src="{% static 'planeador/js/ver_plan.js' %}"></script>
+    <script src="{% static 'planeador/js/page-modificar-plan.js' %}"></script>
     <script>
         actualizar_datos_plan_creado();
 
