--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -68,10 +68,12 @@
                                     </h3>
                                     <div class="box-tools pull-right">
                                         <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                          <i class="fa fa-minus"></i></button>
+                                          <i class="fa fa-minus"></i>
+                                        </button>
                                         <button type="button" class="btn btn-box-tool" data-widget="remove" onclick="on_click_boton_eliminar_trimestre(this)" data-toggle="tooltip" title="Remove">
-                                          <i class="fa fa-times"></i></button>
-                                      </div>
+                                          <i class="fa fa-times"></i>
+                                        </button>
+                                    </div>
                                  </div>
                                  <div class="box-body" >
                                      <table class="table table-hover datos-trimestre">
@@ -151,7 +153,7 @@
                                                     </td>
                                                    <td align="right" style="padding:0px;">
                                                        <div class="input-group-btn">
-                                                           <button type="button" onclick="on_click_boton_eliminar_materia(this)" class="btn btn-link" >
+                                                           <button type="button" onclick="onClickBotonEliminarMateria(this)" class="btn btn-link" >
                                                                <span class="fa fa-times" aria-hidden="true"></span>
                                                            </button>
                                                            <button type="button"  data-toggle="modal" data-target="#modal-materia"  data-action="editar" class="btn btn-link" >
@@ -189,8 +191,8 @@
     <!-- /#page-wrapper -->
     <!-- /.row -->
 
-    {% include 'planeador/modal_materia.html' %}
-    {% include 'planeador/modal_agregar_trimestre.html' %}
+    {% include 'planeador/modals/modal-materia.html' %}
+    {% include 'planeador/modals/modal-agregar-trimestre.html' %}
 
 {% endblock %}
 
@@ -207,9 +209,11 @@
             path_image_flecha_down:"{% static 'misvoti/images/ic_trending_down_black_24px.svg' %}",
 
             tipos_materia:[['GE','General'],['EL','Electiva libre'],['EA','Electiva de Area'],['RG','Regular'],['EX','Extraplan']],
-            plan_creado_json:{{ plan | as_json}}
+            plan_creado_json:{{ plan | as_json}},
+            url_api_plan_details : "{% url 'api:userplan-detail' request.user.username %}",
         }
     </script>
+    <script src="{% static 'planeador/js/page-modificar-plan.js' %}"></script>
 
     <script>
         {# Parametros para el script  modal-materia-js.js #}
@@ -222,50 +226,4 @@
     <script src="{% static 'planeador/js/modal-trimestre-js.js' %}"></script>
 
 
-    <script src="{% static 'planeador/js/page-modificar-plan.js' %}"></script>
-    <script>
-        actualizar_datos_plan_creado();
-
-        // Listener para cuando se clickea el boton de guardar
-        // El cual hace que se mande al servidor el estado del plan que maneja el cliente
-        // Actualizandolo
-        btn_guardar_cambios.click(function () {
-
-            // Desactivamos los select que permiten al usuario cambiar la nota de las materias
-            // Para cada select en la tabla
-
-            fieldset.attr("disabled","disabled");
-
-            // Desactivamos el boton de guardar
-            btn_guardar_cambios.text("Guardando Cambios...");
-
-            // Mandamos los datos al servidor
-            // Notar que mandamos un json de la forma
-            // { "datos":json que el servidor nos manda}
-            // Se manda de esta forma por varios errores que daba django
-            var msg_actualizando_plan = alertify.notify('Actualizando <img src=' + modificar_plan_params.path_image_gear + '  style="width: 40px;height:40px;">','custom',0,null);
-
-            $.ajax({
-                url:"{% url 'api:userplan-detail' request.user.username %}",
-                type: 'POST',
-                data:JSON.stringify(modificar_plan_params.plan_creado_json),
-                success: function(data,status,request) {
-                    alertify.success('¡Plan actualizado!');
-                    btn_guardar_cambios.text("¡Cambios Guardados!");
-                    btn_guardar_cambios.attr("disabled","disabled")
-                },
-                error:function (request, status, error) {
-                    console.log(request,status,error);
-                    alertify.error('Ocurrió un error actualizando el plan :(');
-                    btn_guardar_cambios.text("Guardar Cambios*");
-                },
-                complete:function (request,status) {
-                    fieldset.removeAttr("disabled");
-                    msg_actualizando_plan.dismiss();
-                },
-                contentType:'application/json; indent=4;charset=UTF-8',
-            });
-
-        });
-    </script>
 {% endblock %}
