Agregado eliminar plan

--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -40,7 +40,7 @@
                           <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
-                          <li><a href="#">Eliminar</a></li>
+                          <li><a data-accion="eliminar-plan" data-plan-nombre = "{{ plan.nombre }}" data-plan-id = "{{ plan.id }}">Eliminar</a></li>
                         </ul>
                       </div>
                     </div>
