Arreglado guardar datos de acceso

--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -94,7 +94,7 @@
                 <img src="https://api.adorable.io/avatars/198/{{ request.user.username }}@adorable.png" class="img-circle" alt="User Image">
                 <p>
                   {{ request.user.first_name }}{{ request.user.last_name }}
-                    <br>{{ request.user.username }} - Estudiante Pregrado
+                    <br>{{ request.user.username }} - Estudiante
                 </p>
               </li>
               <!-- Menu Footer-->
@@ -126,7 +126,7 @@
             <p>
               {{ request.user.first_name }}{{ request.user.last_name }}
                 <br>
-                {{ request.user.username }} - Estudiante</p>
+                {{ request.user.username }} </p>
         </div>
       </div>
       <!-- /.search form -->
