--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -27,7 +27,7 @@
     <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect. -->
-    <link rel="stylesheet" href="{% static 'admin-lte/dist/css/skins/skin-green.min.css' %}">
+    <link rel="stylesheet" href="{% static 'admin-lte/dist/css/skins/_all-skins.min.css' %}">
 
     <!-- Alertify CSS -->
     <link href="{% static 'alertifyjs/build/css/alertify.min.css' %}" rel="stylesheet">
@@ -54,7 +54,7 @@
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 
-<body class="hold-transition skin-green fixed  sidebar-mini">
+<body class="hold-transition skin-blue fixed  sidebar-mini">
 
 <div class="wrapper">
 
