--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -68,7 +68,7 @@
                                         <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
                                           <i class="fa fa-minus"></i>
                                         </button>
-                                        <button type="button" class="btn btn-box-tool" data-widget="remove" onclick="onClickBotonEliminarTrimestre(this)" data-toggle="tooltip" title="Remove">
+                                        <button type="button" class="btn btn-box-tool" onclick="onClickBotonEliminarTrimestre(this)" data-toggle="tooltip" title="Remove">
                                           <i class="fa fa-times"></i>
                                         </button>
                                     </div>
