Cambiado string "Julio-Agosto" a "Verano"

--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -58,7 +58,7 @@
                                         {% elif trimestre.periodo == "AJ" %}
                                            Abril - Julio
                                         {% elif trimestre.periodo == "JA" %}
-                                           Julio - Agosto
+                                           Verano
                                         {% else%}
                                            {{ trimestre.periodo }}
                                         {% endif %}
