Agregada versión inicial de editar perfil

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -27,7 +27,7 @@
           {{ form.name.errors }}
       </div>
       <div class="form-group has-feedback">
-        <label class="control-label" for="id_carnet">Carnet</label>
+        <label class="control-label" for="id_carnet">USBID</label>
         <input type="text" class="form-control" placeholder="Carnet" name="carnet" id="id_carnet">
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
           {{ form.carnet.errors }}
