Agregado jquery-confirm

--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -29,6 +29,9 @@
     <link href="{% static 'alertifyjs/build/css/alertify.min.css' %}" rel="stylesheet">
     <link href="{% static 'alertifyjs/build/css/themes/bootstrap.min.css' %}" rel="stylesheet">
 
+    <!-- Jquery Confirm CSS -->
+    <link href="{% static 'jquery-confirm/dist/jquery-confirm.min.css' %}" rel="stylesheet">
+
     <!-- Bootstrap Select CSS -->
     <link href="{% static 'bootstrap-select/dist/css/bootstrap-select.min.css' %}" rel="stylesheet">
 
@@ -174,6 +177,10 @@
 
     <!-- Alertify JavaScript -->
     <script src="{% static 'alertifyjs/build/alertify.min.js' %}"></script>
+
+    <!-- Jquery confirm JavaScript -->
+    <script src="{% static 'jquery-confirm/dist/jquery-confirm.min.js' %}"></script>
+    <script src="{% static 'misvoti/js/jquery-confirm-default.js' %}"></script>
 
     <!--Plugin para enviar archivo en el form de crear proyecto por ajax-->
     <script src="{% static 'jquery-form/dist/jquery.form.min.js' %}"></script>
