arreglado problema minimizar trimestres creados por js

--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -71,21 +71,20 @@
                                  </div>
                                  <div class="card-body p-0" >
                                      <table class="table table-hover datos-trimestre">
-                                             <tr>
-                                                 <th>Indice del Trimestre</th>
-                                                 <td align='center' id='td-indice-periodo-{{ i_trimestre }}' >
-                                                     Nota no calculable
-                                                 </td>
-                                             </tr>
-                                             <tr>
-                                                 <th >Indice Acumulado</th>
-                                                 <td align='center' id='td-indice-acumulado-{{ i_trimestre }}' >
-                                                     Nota no calculable
-                                                 </td>
-                                             </tr>
-
+                                         <tr>
+                                             <th>Indice del Trimestre</th>
+                                             <td align='center' id='td-indice-periodo-{{ i_trimestre }}' >
+                                                 Nota no calculable
+                                             </td>
+                                         </tr>
+                                         <tr>
+                                             <th >Indice Acumulado</th>
+                                             <td align='center' id='td-indice-acumulado-{{ i_trimestre }}' >
+                                                 Nota no calculable
+                                             </td>
+                                         </tr>
                                      </table>
-                                     <table class="table table-hover">
+                                     <table class="table table-hover datos-trimestre">
                                          <thead>
                                              <tr>
                                                  <th>Código</th>
