--- a/planeador/static/planeador/css/ver_plan.css
+++ b/planeador/static/planeador/css/ver_plan.css
@@ -4,3 +4,25 @@
 .datos-trimestre{
     margin-bottom: 0px;
 }
+.float:hover,
+.float:active,
+.float:focus{
+    color:#343a40
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.float-save-button{
+	margin-top:22px;
+}
