agregadas materias libres y electivas a la BD y se reconocen cuando se crean un plan o se agrega una materia en el modal

--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -141,6 +141,12 @@
                 <p>Mi plan</p>
             </a>
           </li>
+          <li class="nav-item">
+            <a href="{%  url 'timeline_plan' %}" class="nav-link {% if pagename == 'timeline_plan' %}active{% endif %}">
+                <i class="fa fa-graduation-cap"></i>
+                <p>Timeline plan</p>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
