--- a/planeador/templates/planeador/page-crear-plan-expe-url.html
+++ b/planeador/templates/planeador/page-crear-plan-expe-url.html
@@ -1,25 +1,27 @@
 {% extends 'misvoti/base.html' %}
 {% load static %}
 {% block content %}
-<div class="content-wrapper">
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
 
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        Datos de acceso al CAS
-      </h1>
-      <ol class="breadcrumb">
-        <li>
-            <i class="fa fa-table"></i>  <a href="{% url 'ver_plan' %}">Mi plan</a>
-        </li>
-        <li class="active">
-            <i class="fa fa-table"></i> Crear
-        </li>
-      </ol>
-    </section>
-
-    <!-- Main content -->
-    <section class="content container-fluid">
+        <!-- Content Header (Page header) -->
+      <section class="content-header">
+          <div class="container-fluid">
+            <div class="row mb-2">
+              <div class="col-sm-6">
+                <h1>Datos de acceso a tu cuenta CAS</h1>
+              </div>
+              <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                  <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                  <li class="breadcrumb-item active">Crear accediendo a mi expediente</li>
+                </ol>
+              </div>
+            </div>
+          </div><!-- /.container-fluid -->
+      </section>
+        <!-- Main content -->
+        <section class="content">
         <div class="row">
             <div class="col-lg-6">
                 <fieldset >
