--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -38,7 +38,7 @@
                         <i class="fa fa-trash"></i> Eliminar plan
                     </a>
                     <div class="row">
-                      <div class="col-md-3 col-sm-6 col-12">
+                      <div class="col-md-3 col-sm-3 col-12">
                         <div class="info-box">
                           <span class="info-box-icon bg-info"><i class="fa fa-font"></i></span>
 
@@ -51,13 +51,39 @@
                         <!-- /.info-box -->
                       </div>
                       <!-- /.col -->
-                      <div class="col-md-3 col-sm-6 col-12">
+                      <div class="col-md-3 col-sm-3 col-12">
                         <div class="info-box">
                           <span class="info-box-icon bg-success"><i class="fa fa-external-link"></i></span>
 
                           <div class="info-box-content">
                             <span class="info-box-text">Retiros</span>
                             <span class="info-box-number" id="info-box-n-retiros"></span>
+                          </div>
+                          <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                      </div>
+                      <!-- /.col -->
+                      <div class="col-md-3 col-sm-3 col-12">
+                        <div class="info-box">
+                          <span class="info-box-icon bg-success"><i class="fa fa-external-link"></i></span>
+
+                          <div class="info-box-content">
+                            <span class="info-box-text">Electivas de Area</span>
+                            <span class="info-box-number" id="info-box-n-electivas-area"></span>
+                          </div>
+                          <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                      </div>
+                      <!-- /.col -->
+                      <div class="col-md-3 col-sm-3 col-12">
+                        <div class="info-box">
+                          <span class="info-box-icon bg-success"><i class="fa fa-external-link"></i></span>
+
+                          <div class="info-box-content">
+                            <span class="info-box-text">Electivas libres</span>
+                            <span class="info-box-number" id="info-box-n-electivas-libre"></span>
                           </div>
                           <!-- /.info-box-content -->
                         </div>
