--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -31,6 +31,7 @@
 
     <!-- Jquery Confirm CSS -->
     <link href="{% static 'jquery-confirm/dist/jquery-confirm.min.css' %}" rel="stylesheet">
+      <!-- DataTable extensions -->
 
     <!-- Bootstrap Select CSS -->
     <link href="{% static 'bootstrap-select/dist/css/bootstrap-select.min.css' %}" rel="stylesheet">
@@ -79,14 +80,6 @@
       </li>
       <li class="nav-item d-none d-sm-inline-block">
         <a href="{% url 'home' %}" class="nav-link">Home</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="{% url 'logout' %}" class="nav-link">
-            <i class="fa fa-arrow-circle-left"></i>
-            Cerrar sesión
-        </a>
       </li>
     </ul>
   </nav>
@@ -147,6 +140,12 @@
                 <p>Timeline plan</p>
             </a>
           </li>
+        <li class="nav-item">
+            <a href="{% url 'logout' %}" class="nav-link">
+                <i class="fa fa-arrow-circle-left"></i>
+                Cerrar sesión
+            </a>
+        </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
@@ -190,6 +189,13 @@
 
     <!--Plugin para enviar archivo en el form de crear proyecto por ajax-->
     <script src="{% static 'jquery-form/dist/jquery.form.min.js' %}"></script>
+
+    <script src="{% static 'datatables.net/js/jquery.dataTables.js' %}"></script>
+{#    <script src="{% static 'datatables.net-bs/js/dataTables.bootstrap.js' %}"></script>#}
+
+    <!-- datatable extensions  -->
+{#    <script src="https://cdn.datatables.net/select/1.2.4/js/dataTables.select.min.js"></script>#}
+    <script src="https://cdn.datatables.net/responsive/2.2.1/js/dataTables.responsive.min.js"></script>
 
     <script src="{% static 'misvoti/js/csrftokens.js' %}"></script>
 
