--- a/planeador/templates/planeador/page-modificar-plan.html
+++ b/planeador/templates/planeador/page-modificar-plan.html
@@ -122,7 +122,7 @@
                                     </div>
                                  </div>
                                  <div class="card-body p-0" >
-                                     <table class="table table-hover datos-trimestre">
+                                     <table class="table table-hover">
                                          <tr>
                                              <th>Indice del Trimestre</th>
                                              <td align='center' id='td-indice-periodo-{{ i_trimestre }}' >
@@ -136,7 +136,7 @@
                                              </td>
                                          </tr>
                                      </table>
-                                     <table class="table table-hover datos-trimestre">
+                                     <table class="table table-hover datos-materias-trimestre">
                                          <thead>
                                              <tr>
                                                  <th>Código</th>
